2005-11-03  Andrew Cagney  <cagney@redhat.com>

	* Proc.java (sendAttach(boolean)): Delete.
	* LinuxProc.java (sendAttach(boolean)): Ditto.

	* Proc.java: Reduce constructors to just one.
	* Task.java: Reduce constructors to just one.
	* LinuxTask.java: Update.
	* LinuxProc.java: Update.

2005-11-02  Andrew Cagney  <cagney@redhat.com>

	* LinuxProc.java: Update, add .buildDimensions to BuildAuxv.

2005-11-01  Jeff Johnston  <jjohnstn@redhat.com>

	* TestGoAndGo.java: Wrap internal counters, timers, etc.. in
	a class so initialization occurs each time test is run.
	* TestModify.java: Ditto.
	* TestPaused.java: Ditto.
	* TestStep.java: Ditto.
	* TestStop.java: Ditto.
	* TestStopAndGo.java: Ditto.
	* TestStopAndStop.java: Ditto.
	* TestSyscall.java: Ditto.
	* TestSyscall2.java: Ditto.
	* TestUnpaused.java: Ditto.
	* TestSyscallOpen.java: Ditto.  Also use SyscallNum to reference
	open syscall number.
	* TestI386Modify.java: Ditto, plus add check for isa and abort
	test if not ia32.
	* TestI386Regs.java: Ditto.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* TestProcGet.java: For ./prog/print/auxv, set STDERR to
	/dev/null.
	* LinuxProc.java: Update BuildAuxv, add bigEndian parameter to
	buildBuffer.

2005-10-31  Phil Muldoon  <pmuldoon@redhat.com>

	* Host.java (getName): Added getName function.
	
	* Task.java (getName): Added getName function.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* LinuxProc.java: Update BuildAuxv, replace buildDimensions with
	buildBuffer.

	* Isa.java: Add .getSyscallEventInfo.
	* LinuxIa32.java: Implement getSyscallEventInfo.
	* LinuxPowerPc.java: Delete unimplemented .SyscallEventInfo.
	* LinuxX8664.java: Ditto.
	* TestSyscallOpen.java: Update.
	* TestI386Regs.java: Update.
	* TestI386Modify.java: Update.

	* LinuxIa32.java: Fold inner Isa class into main class.
	* LinuxX8664.java: Ditto.
	* LinuxPowerPc.java: Ditto.
	* TestI386Regs.java, TestI386Modify.java: Update.

2005-10-30  Andrew Cagney  <cagney@redhat.com>
