@@ -83,10 +83,21 @@ public class LinuxProc
     }
     /**
      * Create a new, attached, and possibly running, process.
+     *
+     * XXX: Should not be needed - an attached Proc should always be
+     * initially running.
      */
     LinuxProc (Proc parent, ProcId procId, boolean running)
     {
 	super (parent.host, parent, procId, true, running);
+    }
+    /**
+     * Create a new, definitely attached, definitely running fork of
+     * Task.
+     */
+    LinuxProc (Task task, ProcId forkId)
+    {
+	super (task, forkId);
     }
     void sendRefresh ()
     {
