@@ -84,10 +84,23 @@ public class LinuxTask
 
     /**
      * Create an attached, possibly running, task.
+     *
+     * XXX: Should not be needed - an attatched Task will always be
+     * initially running.
      */
     LinuxTask (Proc process, TaskId id, boolean running)
     {
 	super (process, id, true, running);
+	setupMapsXXX ();
+    }
+
+    /**
+     * Create a new defintely attached, definitely running, clone of
+     * Task.
+     */
+    LinuxTask (Task task, TaskId cloneId)
+    {
+	super (task, cloneId);
 	setupMapsXXX ();
     }
 
